@@ -103,7 +103,13 @@ public class ColorAttribute extends Attribute {
 	@Override
 	public int hashCode () {
 		int result = super.hashCode();
-		result = 953 * result + color.hashCode();
+		result = 953 * result + color.toIntBits();
 		return result; 
+	}
+	
+	@Override
+	public int compareTo (Attribute o) {
+		if (type != o.type) return (int)(type - o.type);
+		return ((ColorAttribute)o).color.toIntBits() - color.toIntBits();
 	}
 }
