@@ -17,7 +17,6 @@
 package com.badlogic.gdx.graphics.g3d.attributes;
 
 import com.badlogic.gdx.graphics.Cubemap;
-import com.badlogic.gdx.graphics.GLTexture;
 import com.badlogic.gdx.graphics.g3d.Attribute;
 import com.badlogic.gdx.graphics.g3d.utils.TextureDescriptor;
 import com.badlogic.gdx.utils.GdxRuntimeException;
@@ -25,10 +24,6 @@ import com.badlogic.gdx.utils.GdxRuntimeException;
 public class CubemapAttribute extends Attribute {
 	public final static String EnvironmentMapAlias = "environmentMapTexture";
 	public final static long EnvironmentMap = register(EnvironmentMapAlias);
-
-	// FIXME add more types!
-	// FIXME add scaling + offset?
-	// FIXME add filter settings? MipMap needs to be obeyed during loading :/
 
 	protected static long Mask = EnvironmentMap;
 
@@ -68,5 +63,11 @@ public class CubemapAttribute extends Attribute {
 		int result = super.hashCode();
 		result = 967 * result + textureDescription.hashCode();
 		return result;
+	}
+	
+	@Override
+	public int compareTo (Attribute o) {
+		if (type != o.type) return (int)(type - o.type);
+		return textureDescription.compareTo(((CubemapAttribute)o).textureDescription);
 	}
 }
