@@ -18,6 +18,7 @@ package com.badlogic.gdx.graphics.g3d.attributes;
 
 import com.badlogic.gdx.graphics.GL20;
 import com.badlogic.gdx.graphics.g3d.Attribute;
+import com.badlogic.gdx.math.MathUtils;
 import com.badlogic.gdx.utils.GdxRuntimeException;
 import com.badlogic.gdx.utils.NumberUtils;
 
@@ -90,5 +91,18 @@ public class DepthTestAttribute extends Attribute {
 		result = 971 * result + NumberUtils.floatToRawIntBits(depthRangeFar);
 		result = 971 * result + (depthMask ? 1 : 0);
 		return result; 
+	}
+	
+	@Override
+	public int compareTo (Attribute o) {
+		if (type != o.type) return (int)(type - o.type);
+		DepthTestAttribute other = (DepthTestAttribute)o;
+		if (depthFunc != other.depthFunc) return depthFunc - other.depthFunc;
+		if (depthMask != other.depthMask) return depthMask ? -1 : 1;
+		if (!MathUtils.isEqual(depthRangeNear, other.depthRangeNear))
+			return depthRangeNear < other.depthRangeNear ? -1 : 1;
+		if (!MathUtils.isEqual(depthRangeFar, other.depthRangeFar))
+			return depthRangeFar < other.depthRangeFar ? -1 : 1;
+		return 0;
 	}
 }
