@@ -17,7 +17,7 @@
 package com.badlogic.gdx.graphics.g3d.attributes;
 
 import com.badlogic.gdx.graphics.g3d.Attribute;
-import com.badlogic.gdx.utils.GdxRuntimeException;
+import com.badlogic.gdx.math.MathUtils;
 import com.badlogic.gdx.utils.NumberUtils;
 
 public class FloatAttribute extends Attribute {
@@ -56,5 +56,12 @@ public class FloatAttribute extends Attribute {
 		int result = super.hashCode();
 		result = 977 * result + NumberUtils.floatToRawIntBits(value);
 		return result; 
+	}
+	
+	@Override
+	public int compareTo (Attribute o) {
+		if (type != o.type) return (int)(type - o.type);
+		final float v = ((FloatAttribute)o).value;
+		return MathUtils.isEqual(value, v) ? 0 : value < v ? -1 : 1;
 	}
 }
