@@ -48,4 +48,10 @@ public class IntAttribute extends Attribute {
 		result = 983 * result + value;
 		return result; 
 	}
+	
+	@Override
+	public int compareTo (Attribute o) {
+		if (type != o.type) return (int)(type - o.type);
+		return value - ((IntAttribute)o).value;
+	}
 }
