@@ -16,11 +16,11 @@
 
 package com.badlogic.gdx.graphics.g3d.attributes;
 
-import com.badlogic.gdx.graphics.GLTexture;
 import com.badlogic.gdx.graphics.Texture;
 import com.badlogic.gdx.graphics.g2d.TextureRegion;
 import com.badlogic.gdx.graphics.g3d.Attribute;
 import com.badlogic.gdx.graphics.g3d.utils.TextureDescriptor;
+import com.badlogic.gdx.math.MathUtils;
 import com.badlogic.gdx.utils.GdxRuntimeException;
 import com.badlogic.gdx.utils.NumberUtils;
 
@@ -174,7 +174,21 @@ public class TextureAttribute extends Attribute {
 		result = 991 * result + NumberUtils.floatToRawIntBits(offsetV);
 		result = 991 * result + NumberUtils.floatToRawIntBits(scaleU);
 		result = 991 * result + NumberUtils.floatToRawIntBits(scaleV);
-		result = 991 * result + NumberUtils.floatToRawIntBits(uvIndex);
+		result = 991 * result + uvIndex;
 		return result;
+	}
+	
+	@Override
+	public int compareTo (Attribute o) {
+		if (type != o.type) return type < o.type ? -1 : 1;
+		TextureAttribute other = (TextureAttribute)o;
+		final int c = textureDescription.compareTo(other.textureDescription);
+		if (c != 0) return c;
+		if (uvIndex != other.uvIndex) return uvIndex - other.uvIndex;
+		if (!MathUtils.isEqual(offsetU, other.offsetU)) return offsetU < other.offsetU ? 1 : -1;
+		if (!MathUtils.isEqual(offsetV, other.offsetV)) return offsetV < other.offsetV ? 1 : -1;
+		if (!MathUtils.isEqual(scaleU, other.scaleU)) return scaleU < other.scaleU ? 1 : -1;
+		if (!MathUtils.isEqual(scaleV, other.scaleV)) return scaleV < other.scaleV ? 1 : -1;
+		return 0;
 	}
 }
